objects/ssot__RequiredProduct__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CreatedById__c</fullName>
        <label>Created By</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Required Product  Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedById__c</fullName>
        <label>Last Modified By</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ProductId__c</fullName>
        <label>Product</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__QuantityUOM__c</fullName>
        <label>Quantity Unit Of Measure</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedToId__c</fullName>
        <label>Related To Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedToObject__c</fullName>
        <label>Related To Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RequiredProductNumber__c</fullName>
        <label>Required Product Number</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RequiredQuantity__c</fullName>
        <label>Required Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1710432556783_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RequiredProduct_RelatedToId_map_Work_rel</label>
        <referenceTo>ssot__WorkOrderItem__dlm</referenceTo>
        <relationshipLabel>RequiredProduct_RelatedToId_map_Work_rel</relationshipLabel>
        <relationshipName>rel_1710432556783_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1710432596743_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RequiredProduct_RelatedToId_map_Work_rel</label>
        <referenceTo>ssot__WorkType__dlm</referenceTo>
        <relationshipLabel>RequiredProduct_RelatedToId_map_Work_rel</relationshipLabel>
        <relationshipName>rel_1710432596743_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1710432627368_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RequiredProduct_RelatedToId_map_Work_rel</label>
        <referenceTo>ssot__WorkOrder__dlm</referenceTo>
        <relationshipLabel>RequiredProduct_RelatedToId_map_Work_rel</relationshipLabel>
        <relationshipName>rel_1710432627368_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>